--- a/essentials.html
+++ b/essentials.html
@@ -36,7 +36,7 @@
               <button class="nav-button" onclick="window.location.href='blog.html';">Blog</button>
           </nav>
       </div>
-      <h3 class="blog-title">Sophia Cong | 2/20/2024 | Assignment Title</h3>
+      <h3 class="blog-title">Sophia Cong | 2/20/2024 | Accessibility</h3>
   </header>
 
   <main>
