--- a/startingup.html
+++ b/startingup.html
@@ -38,7 +38,7 @@
                 </nav>
             </div>
 
-            <h3 class="blog-title">Sophia Cong | 2/20/2024 | Assignment Title</h3>
+            <h3 class="blog-title">Sophia Cong | 2/20/2024 | Accessibility</h3>
         </header>
 
         <main class="startingup-main">
